--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,4 @@ flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
 openai==1.3.0
-sqlalchemy==2.0.23
-python-jose==3.3.0
-bcrypt==4.0.1
-flask-sqlalchemy==3.1.1
-flask-login==0.6.3
-flask-mail==0.9.1
-itsdangerous==2.1.2
-email-validator==2.1.0.post1
+firebase-admin==6.2.0
