--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Flask Secret Key
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=secret-key-here
 
 # OpenAI API Key
-OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_API_KEY=openai-api-key-here
 
 # Email Configuration
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-email-app-password
+MAIL_USERNAME=email@gmail.com
+MAIL_PASSWORD=email-app-password
